@@ -1,3 +1,10 @@
+2010-05-05  Sven Killig  <sven@killig.de>
+
+        * canon.c, canon.h, library.c:
+          - added shooting mode
+          - added ISO 50
+          - converted zoom level to GP_WIDGET_RANGE
+
 2009-07-28  Axel Waggershauser  <awagger@web.de>
 
         * canon.c,canon.h,library.c,usb.c: Unified all configuration
